Add new and list tournament components. Add routing

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>Angular 2 Seed</h1>
+<h1>Bridge Score</h1>
+
+<nav>
+  <a [routerLink]="['NewTournament']">New Tournament</a>
+  <a [routerLink]="['ListTournaments']">List Tournaments</a>
+</nav>
+<router-outlet></router-outlet>
